--- a/20250930_visualization.Rmd
+++ b/20250930_visualization.Rmd
@@ -97,3 +97,89 @@ ggplot (data = molokai_df, aes (x = date, y = tmax, color = name)) +
   geom_line (data = central_park_df)
 ```
 
+ ## `patchwork`
+ Make three plots
+```{r}
+ggp_tmax_tmin = 
+  weather_df |>
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = 0.5)
+ggp_tmax_tmin
+ggp_prec_density = 
+  weather_df |>
+  filter (prcp > 20)|>
+  ggplot(aes(x = prcp, fill = name)) + 
+  geom_density(alpha = 0.5)
+ggp_prec_density
+
+```
+
+## Data manipulation
+```{r}
+weather_df |>
+  mutate (name = fct_relevel(name, c ("Molokai_HI", "CentralPark_NY", "Waterhole_WA"))) |>
+  ggplot (aes(x = name, y = tmax, fill = name)) + 
+  geom_violin(alpha = 0.5)
+```
+ Can arrange in order to show clear data trend
+```{r}
+weather_df |>
+  mutate ( name = fct_reorder(name, tmax)) |>
+  ggplot (aes(x = name, y = tmax, fill = name)) + 
+  geom_violin(alpha = 0.5)
+```
+ What about data tidiness
+```{r}
+pulse_df = 
+  haven:: read_sas("./data/public_pulse_data.sas7bdat")|>
+  janitor::clean_names() |>
+  pivot_longer(
+    bdi_score_bl : bdi_score_12m,
+    names_to = "visit",
+    values_to = "bdi"
+  )|>
+  mutate(visit = fct_inorder(visit))
+
+```
+ 
+ ## How to think of what you can plot: sketch the plot
+ 
+ what is in the x : dose
+ Y is the days of follow up
+ facet : a column of day of treatment
+ facet will be outcomes
+ Write out your dataframe so you can make the plot
+ 
+ Make a plot for FAS study
+```{r}
+
+pups_df = 
+  read_csv ("./data/FAS_pups.csv", na = c("NA", ".", ""), skip = 3) |>
+  janitor::clean_names()|>
+  mutate (
+    sex = case_match(
+      sex, 
+      1 ~ "male",
+      2 ~ "female"
+    )
+  )
+litter_data = 
+  read_csv("./data/FAS_litters.csv", na = c("NA", ".", "")) |>
+  janitor::clean_names() |>
+  separate(group, into = c("dose", "day_of_tx"), sep = 3)
+
+fas_data = left_join(pups_df, litter_data, by = "litter_number") 
+
+fas_data |> 
+  select(sex, dose, day_of_tx, pd_ears:pd_walk) |> 
+  pivot_longer(
+    pd_ears:pd_walk,
+    names_to = "outcome", 
+    values_to = "pn_day") |> 
+  drop_na() |> 
+  mutate(outcome = forcats::fct_reorder(outcome, pn_day, median)) |> 
+  ggplot(aes(x = dose, y = pn_day)) + 
+  geom_violin() + 
+  facet_grid(day_of_tx ~ outcome)
+```
+ 
